# vibe-100-days

./: .gitignore  001-clevername-smart-renamer.html  001-clevername-smart-renamer.md  README.md
day1-clevername/: README.md  clevername.py  requirements.txt
day1-clevername/src/: __init__.py  ai_labeler.py  executor.py  metadata.py  preview.py  rules.py  scanner.py  ui.py
day1-clevername/tests/: test_rules.py
day10/: README.md  pyproject.toml  requirements.txt
day10/src/: __init__.py  csv_encoding_fixer.py
day10/tests/: __init__.py  test_csv_encoding_fixer.py
day2/: .gitignore  README.md  article.html  article.md  pyproject.toml  requirements.txt
day2/examples/: sample_output.md
day2/src/: tree_gen.py
day2/tests/: test_cli.py  test_tree_gen.py
day21/: README.md  pyproject.toml
day21/src/: __init__.py  wechat_article_pusher.py
day21/tests/: __init__.py  test_wechat_article_pusher.py
day3/: .gitignore  README.md  article.html  article.md  pyproject.toml  requirements.txt
day3/examples/: sample_output.md
day3/src/: wttr_cli.py
day3/tests/: __init__.py  test_cli.py  test_wttr_cli.py
day5/: README.md  article.html  article.md  pyproject.toml
day5/examples/: sample_article.html  sample_article.md
day5/src/: __init__.py  wechat_md.py
day5/tests/: __init__.py  test_wechat_md.py
day6/: README.md  pyproject.toml
day6/src/: __init__.py  img_slim.py
day6/tests/: __init__.py  test_img_slim.py
day7/: README.md  pyproject.toml
day7/src/: __init__.py  dupe_scout.py
day7/tests/: __init__.py  test_dupe_scout.py
day8/: README.md  pyproject.toml
day8/src/: __init__.py  pdf_kit_lite.py
day8/tests/: __init__.py  test_pdf_kit_lite.py
day9/: README.md  pyproject.toml
day9/src/: __init__.py  excel_cleaner.py
day9/tests/: __init__.py  test_excel_cleaner.py
planning/: content-calendar.md  ideas.md
