[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "csv-encoding-fixer"
version = "0.1.0"
description = "Detect and convert CSV encodings safely"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = ["charset-normalizer>=3.0.0"]

[project.scripts]
csv-encoding-fixer = "src.csv_encoding_fixer:main"

[tool.setuptools.packages.find]
include = ["src*"]
