[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "wttr-cli"
version = "0.1.0"
description = "A minimal terminal weather dashboard powered by wttr.in"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "requests>=2.28.0",
    "rich>=13.0.0",
]

[project.scripts]
wttr = "src.wttr_cli:main"

[tool.setuptools.packages.find]
include = ["src*"]