[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "excel-cleaner"
version = "0.1.0"
description = "Clean common messy Excel workbooks safely"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = ["openpyxl>=3.1.0"]

[project.scripts]
excel-cleaner = "src.excel_cleaner:main"

[tool.setuptools.packages.find]
include = ["src*"]
